# BaZi

./: .gitignore  CLAUDE.md  README.md  chatgpt-response.md  docker-compose.yml  gemini-response.md  interpretation_lee.md  markdown.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: developer.md  kkachi-developer.md  kkachi-researcher.md  researcher.md
.claude/hooks/: lint.sh
alembic/: env.py
alembic/versions/: 150d31f50d94_rename_daily_fortunes_to_fortunes.py  321b481747dd_add_compatibilities_table.py  43b9ae6c0441_add_daily_fortunes_table.py  a1b2c3d4e5f6_add_payments_table.py  af835eadbb3d_create_members_profiles_analyses_tables.py  b2c3d4e5f6a7_add_is_self_to_profiles.py  c3a8f9d2e471_add_interpret_feedbacks_table.py  fbc0f370afd4_cascade_delete_compatibilities_fk.py
docs/: compatibility_scenarios.md  ganji_basics.md  palmistry_scenarios.md  profile_scenarios.md  weather_scenarios.md
docs/domain/: fortune_basics.md  ganji_basics.md
docs/frontend/: screen_spec.md
docs/history/: 2026-04-08.md
docs/research/: benchmark_유사서비스.md  deployment_인프라전략.md  llm_해석엔진_전략.md  monetization_전환전략.md  palmistry_physiognomy_고도화.md  retention_전략.md  saju_combined_systems.md  viral_공유전략.md
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx  (+2 more)
src/bazi/: chart.py  container.py  fastapi.py  fortune.py  interpret.py  model.py  streamlit.py
src/common/: constants.py  ganji.py  oheng.py  relations.py  sipsin.py
src/kkachi/: container.py  fastapi.py
src/saju/: __init__.py  analyzer.py  fortune.py  interpret.py  natal.py
tests/: test_analyzer.py  test_calculate_saju.py  test_fortune.py  test_interpret.py  test_sibi_unseong.py
tests/adapter/: test_analyzer.py  test_fortune.py  test_sibi_unseong.py
tests/application/: test_interpret.py
(+207 files in other folders)
