[project]
name = "BaZi"
version = "1.0.0"
description = "사주팔자"
requires-python = ">=3.13,<3.14"
dependencies = [
    "orjson>=3.11.7",
    "httpx>=0.28.1",
    "sajupy>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/saju"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
