[project]
name = "BaZi"
version = "1.0.0"
description = "사주팔자"
requires-python = ">=3.13,<3.14"
dependencies = [
    "orjson>=3.11.7",
    "httpx>=0.28.1",
    "sajupy>=0.2.0",
    "streamlit>=1.45.0",
    "plotly>=6.6.0",
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "dependency-injector>=4.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bazi"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
