[project]
name = "BaZi"
version = "1.0.0"
description = "사주팔자"
requires-python = ">=3.13,<3.14"
dependencies = [
    "orjson>=3.11.7",
    "httpx>=0.28.1",
    "sajupy>=0.2.0",
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "dependency-injector>=4.49.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "openai>=2.31.0",
    "mediapipe>=0.10.33",
    "python-multipart>=0.0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kkachi"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
